# FH-DualSense-Enhanced

./: .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  linux_start.sh  start.bat  win_start.bat
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_STATE.md  ReadmeEN.md  ReadmeJA.md  ReadmeTR.md  ReadmeZH.md  THIRD_PARTY_NOTICES.md
packaging/linux/: build_elf.sh  fhds.spec
packaging/release/: README.txt
packaging/windows/: .gitignore  build_exe.bat  dpi_runtime_hook.py  fhds.manifest  fhds.spec  shortcut_links.py  update_helper.py  write_sha256.py
packaging/zuv/: build_zuv.bat
src/: main.py  pyproject.toml
src/lang/: de.py  ja.py  ru.py  tr.py  zh.py  zh_tw.py
src/modules/: __init__.py  about.py  dpi.py  feedback_schema.py  loop.py  preferences.py  runtime_logging.py  settings.py
src/modules/config/: paths.py  preferences.py  profile_session.py  profiles.py  settings.py  system_language.py
src/modules/dsx/: client.py  dsx_wrapper.py
src/modules/dualsense/: __init__.py  _hidraw.py  adaptive_trigger.py  bt_haptics.py  controller_state.py  input_state.py  main.py  output_state.py  presentation.py  topology.py
src/modules/forzahorizon/: __init__.py  collision.py  controller_icons.py  effects.py  fh6_language.py  fh6_language_presentation.py  game_launch.py  lighting.py  process_watch.py  redline.py  udp_forward.py  udp_listener.py
src/modules/gui/: about_tab.py  controls_tab.py  dialogs.py  fh6_utilities_tab.py  lang_tab.py  lighting_tab.py  main.py  overview_status.py  overview_tab.py  profiles_tab.py  settings_tab.py  system_tab.py  theme.py  tray.py  variants.py  widgets.py
src/modules/haptics/: __init__.py  audio.py  bt_audio.py  frame.py  lifecycle.py  manager.py  mixer.py  pcm.py  windows_endpoint.py
src/modules/tui/: about_tab.py  controls_tab.py  dialogs.py  fh6_utilities_tab.py  lighting_tab.py  logs_tab.py  main.py  profiles_tab.py  settings_tab.py  system_tab.py
src/modules/udplistener/: main.py
src/modules/update/: __init__.py  github.py  install.py  model.py  presentation.py  service.py  transaction.py
src/modules/xinput/: __init__.py  bridge.py  driver.py  report.py  service.py  vigem_client.py
tests/: test_about_and_release.py  test_backend_factory.py  test_community_defaults.py  test_dpi_contract.py  test_enhanced_distribution.py  test_haptic_settings.py  test_loop_haptics.py  test_main_runtime.py  test_packaging_haptics.py  test_profile_persistence.py  test_runtime_logging.py  test_system_language.py  test_tui_lifecycle.py  test_update_shortcuts.py  test_update_startup.py  test_update_transaction.py  test_updater.py
tests/dsx/: test_client.py
tests/dualsense/: test_bt_haptics.py  test_controller_runtime.py  test_controller_state.py  test_input_consumer.py  test_topology.py  (+3 more)
(+87 files in other folders)
