[project]
name = "fh-dualsense-enhanced"
version = "7"
description = "Enhanced Forza Horizon DualSense adaptive triggers and body haptics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "hidapi>=0.15.0",
    "numpy>=2.1.0",
    "pillow>=12.3.0",
    "psutil>=7.2.2",
    "pystray>=0.19.5",
    "sounddevice>=0.5.1",
    "textual>=8.2.5",
    "PyGObject>=3.42.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pyinstaller==6.16.0",
    "pyrefly==1.1.1",
    "pytest>=9.0.0",
]

[tool.pyrefly]
project-includes = ["."]
search-path = ["."]
ignore-errors-in-generated-code = true

[tool.pyrefly.errors]
bad-argument-type = false
implicit-import = false
bad-assignment = false
bad-return = false
missing-attribute = false
bad-function-definition = false
no-matching-overload = false

[tool.zuv]
entry = "main.py"
volume = "data"

[tool.ruff]
line-length = 120

[tool.uv.sources]
